// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTableOfRecords column actions multiple is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
      <EuiTableHeaderCell
        align="right"
        key="_actions_h_1"
        scope="col"
      />
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_1_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "name": "Actions",
                  "render": [Function],
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                    Object {
                      "id": 2,
                      "name": "name2",
                    },
                    Object {
                      "id": 3,
                      "name": "name3",
                    },
                  ],
                  "totalRecordCount": 3,
                },
              }
            }
            record={
              Object {
                "id": 1,
                "name": "name1",
              }
            }
            recordId={1}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_2_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "name": "Actions",
                  "render": [Function],
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                    Object {
                      "id": 2,
                      "name": "name2",
                    },
                    Object {
                      "id": 3,
                      "name": "name3",
                    },
                  ],
                  "totalRecordCount": 3,
                },
              }
            }
            record={
              Object {
                "id": 2,
                "name": "name2",
              }
            }
            recordId={2}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_3_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "name": "Actions",
                  "render": [Function],
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                    Object {
                      "id": 2,
                      "name": "name2",
                    },
                    Object {
                      "id": 3,
                      "name": "name3",
                    },
                  ],
                  "totalRecordCount": 3,
                },
              }
            }
            record={
              Object {
                "id": 3,
                "name": "name3",
              }
            }
            recordId={3}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords column actions single is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
      <EuiTableHeaderCell
        align="right"
        key="_actions_h_1"
        scope="col"
      />
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_1_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "description": "edit",
                  "name": "Edit",
                  "onClick": [Function],
                  "type": "button",
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                    Object {
                      "id": 2,
                      "name": "name2",
                    },
                    Object {
                      "id": 3,
                      "name": "name3",
                    },
                  ],
                  "totalRecordCount": 3,
                },
              }
            }
            record={
              Object {
                "id": 1,
                "name": "name1",
              }
            }
            recordId={1}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_2_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "description": "edit",
                  "name": "Edit",
                  "onClick": [Function],
                  "type": "button",
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                    Object {
                      "id": 2,
                      "name": "name2",
                    },
                    Object {
                      "id": 3,
                      "name": "name3",
                    },
                  ],
                  "totalRecordCount": 3,
                },
              }
            }
            record={
              Object {
                "id": 2,
                "name": "name2",
              }
            }
            recordId={2}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
        <EuiTableRowCell
          align="right"
          key="record_actions_3_1"
          textOnly={false}
        >
          <ExpandedRecordActions
            actionEnabled={[Function]}
            actions={
              Array [
                Object {
                  "description": "edit",
                  "name": "Edit",
                  "onClick": [Function],
                  "type": "button",
                },
              ]
            }
            model={
              Object {
                "data": Object {
                  "records": Array [
                    Object {
                      "id": 1,
                      "name": "name1",
                    },
                    Object {
                      "id": 2,
                      "name": "name2",
                    },
                    Object {
                      "id": 3,
                      "name": "name3",
                    },
                  ],
                  "totalRecordCount": 3,
                },
              }
            }
            record={
              Object {
                "id": 3,
                "name": "name3",
              }
            }
            recordId={3}
            visible={false}
          />
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords column render function renders column value 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={false}
        >
          NAME1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={false}
        >
          NAME2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={false}
        >
          NAME3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiRecordsTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <table
    class="euiTable"
  >
    <thead>
      <tr>
        <th
          class="euiTableHeaderCell"
          scope="col"
        >
          <div
            class="euiTableCellContent"
          >
            Name
          </div>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`EuiTableOfRecords pagination and selection is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column_h"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_1"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_1-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_2"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_2-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_3"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_3-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_4_3"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_4"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_4-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_4_0"
          textOnly={true}
        >
          name4
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_5_4"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_5"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_5-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_5_0"
          textOnly={true}
        >
          name5
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_6_5"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_6"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_6-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_6_0"
          textOnly={true}
        >
          name6
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <PaginationBar
    config={
      Object {
        "columns": Array [
          Object {
            "description": "description",
            "field": "name",
            "name": "Name",
          },
        ],
        "onDataCriteriaChange": [Function],
        "pagination": Object {},
        "recordId": "id",
        "selection": Object {
          "onSelectionChanged": [Function],
        },
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 0,
            "size": 3,
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "id": 1,
              "name": "name1",
            },
            Object {
              "id": 2,
              "name": "name2",
            },
            Object {
              "id": 3,
              "name": "name3",
            },
            Object {
              "id": 4,
              "name": "name4",
            },
            Object {
              "id": 5,
              "name": "name5",
            },
            Object {
              "id": 6,
              "name": "name6",
            },
          ],
          "totalRecordCount": 6,
        },
      }
    }
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
  />
</div>
`;

exports[`EuiTableOfRecords pagination is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_4_3"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_4_0"
          textOnly={true}
        >
          name4
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_5_4"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_5_0"
          textOnly={true}
        >
          name5
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_6_5"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_6_0"
          textOnly={true}
        >
          name6
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <PaginationBar
    config={
      Object {
        "columns": Array [
          Object {
            "description": "description",
            "field": "name",
            "name": "Name",
          },
        ],
        "onDataCriteriaChange": [Function],
        "pagination": Object {},
        "recordId": "id",
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 0,
            "size": 3,
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "id": 1,
              "name": "name1",
            },
            Object {
              "id": 2,
              "name": "name2",
            },
            Object {
              "id": 3,
              "name": "name3",
            },
            Object {
              "id": 4,
              "name": "name4",
            },
            Object {
              "id": 5,
              "name": "name5",
            },
            Object {
              "id": 6,
              "name": "name6",
            },
          ],
          "totalRecordCount": 6,
        },
      }
    }
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
  />
</div>
`;

exports[`EuiTableOfRecords pagination page 2 is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_4_3"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_4_0"
          textOnly={true}
        >
          name4
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_5_4"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_5_0"
          textOnly={true}
        >
          name5
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_6_5"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_6_0"
          textOnly={true}
        >
          name6
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <PaginationBar
    config={
      Object {
        "columns": Array [
          Object {
            "description": "description",
            "field": "name",
            "name": "Name",
          },
        ],
        "onDataCriteriaChange": [Function],
        "pagination": Object {},
        "recordId": "id",
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 1,
            "size": 3,
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "id": 1,
              "name": "name1",
            },
            Object {
              "id": 2,
              "name": "name2",
            },
            Object {
              "id": 3,
              "name": "name3",
            },
            Object {
              "id": 4,
              "name": "name4",
            },
            Object {
              "id": 5,
              "name": "name5",
            },
            Object {
              "id": 6,
              "name": "name6",
            },
          ],
          "totalRecordCount": 6,
        },
      }
    }
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
  />
</div>
`;

exports[`EuiTableOfRecords pagination, selection, and sorting is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCellCheckbox
        key="_selection_column_h"
        scope="col"
        width="24px"
      >
        <EuiCheckbox
          checked={false}
          disabled={false}
          id="_selection_column-checkbox"
          onChange={[Function]}
          type="inList"
        />
      </EuiTableHeaderCellCheckbox>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={true}
        isSorted={true}
        key="_data_h_name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_1"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_1-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_2"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_2-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_3"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_3-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_4_3"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_4"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_4-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_4_0"
          textOnly={true}
        >
          name4
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_5_4"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_5"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_5-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_5_0"
          textOnly={true}
        >
          name5
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_6_5"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCellCheckbox
          key="_selection_column_6"
        >
          <EuiCheckbox
            checked={false}
            disabled={false}
            id="_selection_column_6-checkbox"
            onChange={[Function]}
            type="inList"
          />
        </EuiTableRowCellCheckbox>
        <EuiTableRowCell
          align="left"
          key="_data_column_name_6_0"
          textOnly={true}
        >
          name6
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
  <PaginationBar
    config={
      Object {
        "columns": Array [
          Object {
            "description": "description",
            "field": "name",
            "name": "Name",
            "sortable": true,
          },
        ],
        "onDataCriteriaChange": [Function],
        "pagination": Object {},
        "recordId": "id",
        "selection": Object {
          "onSelectionChanged": [Function],
        },
      }
    }
    model={
      Object {
        "criteria": Object {
          "sort": Object {
            "direction": "asc",
            "field": "name",
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "id": 1,
              "name": "name1",
            },
            Object {
              "id": 2,
              "name": "name2",
            },
            Object {
              "id": 3,
              "name": "name3",
            },
            Object {
              "id": 4,
              "name": "name4",
            },
            Object {
              "id": 5,
              "name": "name5",
            },
            Object {
              "id": 6,
              "name": "name6",
            },
          ],
          "totalRecordCount": 6,
        },
      }
    }
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
  />
</div>
`;

exports[`EuiTableOfRecords records are rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={false}
        isSorted={false}
        key="_data_h_name_0"
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody>
      <EuiTableRow
        isSelected={false}
        key="row_1_0"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_1_0"
          textOnly={true}
        >
          name1
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_2_1"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_2_0"
          textOnly={true}
        >
          name2
        </EuiTableRowCell>
      </EuiTableRow>
      <EuiTableRow
        isSelected={false}
        key="row_3_2"
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <EuiTableRowCell
          align="left"
          key="_data_column_name_3_0"
          textOnly={true}
        >
          name3
        </EuiTableRowCell>
      </EuiTableRow>
    </EuiTableBody>
  </EuiTable>
</div>
`;

exports[`EuiTableOfRecords sorting is rendered 1`] = `
<div
  className="euiRecordsTable"
>
  <EuiTable>
    <EuiTableHeader>
      <EuiTableHeaderCell
        align="left"
        isSortAscending={true}
        isSorted={true}
        key="_data_h_name_0"
        onSort={[Function]}
        scope="col"
      >
        Name
      </EuiTableHeaderCell>
    </EuiTableHeader>
    <EuiTableBody />
  </EuiTable>
</div>
`;
